--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
